--- a/src/scss/frontend/_masks.scss
+++ b/src/scss/frontend/_masks.scss
@@ -1,13 +1,13 @@
 .znpb-mask {
 	position: absolute;
 	right: 0;
-	bottom: 0;
+	bottom: -1px;
 	left: 0;
 	width: 100%;
 	height: auto;
 	color: #fff;
 
-	svg {
+	svg.zion-icon.zion-svg-inline {
 		display: block;
 		width: 100%;
 		height: 100%;
