--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -50,3 +50,8 @@ $column-color: #eec643;
 $column-border-color: #faeec6;
 $elements-toolbox-color: #06bee1;
 $elements-toolbox-border-color: #b4ebf6;
+
+
+:root {
+	--zion-border-color: #e5e5e5;
+  }
