update free masks
add masks files to assets
edit the shapes markup
add composer library to sanitize svg

--- a/src/scss/editor.scss
+++ b/src/scss/editor.scss
@@ -5,5 +5,5 @@
 @import "_mixins.scss";
 @import "_buttons.scss";
 @import "./editor/_wordpress.scss";
-
+@import "./frontend/_masks";
 @import "./_scrollbar.scss";
