--- a/src/scss/frontend/_masks.scss
+++ b/src/scss/frontend/_masks.scss
@@ -6,15 +6,12 @@
 	width: 100%;
 	height: auto;
 	color: #fff;
+	line-height: 0;
 
 	svg.zion-icon.zion-svg-inline {
 		display: block;
 		width: 100%;
 		height: 100%;
-	}
-
-	&.znpb-shape-divider-icon {
-		display: flex;
 	}
 
 	.zion-shape-double {
