test without rotate in css

--- a/src/scss/frontend/_masks.scss
+++ b/src/scss/frontend/_masks.scss
@@ -23,8 +23,8 @@
 	}
 }
 
-.-mask-position--top {
-	.znpb-mask svg {
-		transform: rotate(180deg);
-	}
-}
+// .-mask-position--top {
+// 	.znpb-mask svg {
+// 		transform: rotate(180deg);
+// 	}
+// }
