add posibility for addign mask to top and bottom of a section

--- a/src/scss/frontend/_masks.scss
+++ b/src/scss/frontend/_masks.scss
@@ -21,10 +21,13 @@
 			opacity: .6;
 		}
 	}
+	&.-pos--top {
+		top: -1px;
+		bottom: auto;
+		svg {
+			transform: rotate(180deg);
+		}
+	}
 }
 
-// .-mask-position--top {
-// 	.znpb-mask svg {
-// 		transform: rotate(180deg);
-// 	}
-// }
+
