--- a/src/scss/frontend/_masks.scss
+++ b/src/scss/frontend/_masks.scss
@@ -16,11 +16,27 @@
 		fill: currentColor;
 	}
 
-	&-pos--top {
-		top: -1px;
-		bottom: auto;
-		svg {
-			transform: rotate(180deg);
+	&-pos {
+		&--top {
+			top: -1px;
+			bottom: auto;
+			svg {
+				transform: rotate(180deg);
+			}
+
+			&.zb-mask-pos--flip {
+				svg {
+					transform: rotate(180deg) scale(-1,1);
+				}
+			}
+		}
+
+		&--bottom {
+			&.zb-mask-pos--flip {
+				svg {
+					transform: scale(-1,1);
+				}
+			}
 		}
 	}
 }
