--- a/packages/elements/src/Testimonial/frontend.scss
+++ b/packages/elements/src/Testimonial/frontend.scss
@@ -17,7 +17,7 @@
 
 		&-name {
 			margin-bottom: 0;
-			color: $black;
+			color: #000;
 			font-size: 16px;
 			font-weight: 500;
 		}
@@ -57,7 +57,6 @@
 
 			object-fit: cover;
 		}
-
 	}
 
 	&.-position--right {
