--- a/packages/css-variables/frontend.scss
+++ b/packages/css-variables/frontend.scss
@@ -4,6 +4,6 @@
 @import "./frontend/_grid";
 @import "./frontend/_video";
 @import "./frontend/_utils";
-@import "./frontend/_zionicons";
+@import "./zionicons";
 @import "./frontend/_background";
 @import "./frontend/_masks";
