Fixed nonce not refreshing properly
https://hogash.atlassian.net/browse/ZB-2131

--- a/packages/css-variables/_zionicons.scss
+++ b/packages/css-variables/_zionicons.scss
@@ -4,7 +4,7 @@
 	font-weight: normal;
 
 	src: url("./fonts/zion.eot");
-	src: url("./fonts/zion.eot") format("embedded-opentype"),
+	src: url("./fonts/zion.eot?#iefix") format("embedded-opentype"),
 	url("./fonts/zion.woff2") format("woff2"),
 	url("./fonts/zion.woff") format("woff"),
 	url("./fonts/zion.ttf") format("truetype"),
