--- a/packages/elements/src/Gallery/frontend.scss
+++ b/packages/elements/src/Gallery/frontend.scss
@@ -28,3 +28,28 @@
 		flex: 0 0 20%;
 	}
 }
+
+@mixin generate-columns() {
+	$breakpoints: (
+	lg: "991.98px",
+	md: "767.98px",
+	sm: "575.98px",
+	);
+	$columns: 5;
+	// Generate css for all media queries
+	@each $breakpointId, $breakpointValue in $breakpoints {
+		$suffix: "--#{$breakpointId}";
+
+		@media (max-width: $breakpointValue) {
+			@for $size from 1 through $columns {
+				$percentage: (100 / $size);
+				.zb-el-gallery-columns#{$suffix}--#{$size} {
+					.zb-el-gallery-item {
+						flex: 0 0 #{$percentage} + unquote("%");
+					}
+				}
+			}
+		}
+	}
+}
+@include generate-columns();
