--- a/packages/rtl/editor-rtl.scss
+++ b/packages/rtl/editor-rtl.scss
@@ -378,6 +378,11 @@ h4.znpb-panel__header-name > .znpb-editor-icon-wrapper {
 			padding-left: 0;
 		}
 	}
+
+	&Image, &Icon {
+		padding-right: 15px;
+		padding-left: 0;
+	}
 }
 .znpb-wireframe-item .znpb-element-toolbox__add-element-button {
 	right: 50%;
@@ -386,4 +391,10 @@ h4.znpb-panel__header-name > .znpb-editor-icon-wrapper {
 }
 .znpb-wireframe-item__delete-icon {
 	padding: 13px 0 13px 20px;
+}
+.znpb-wireframe-item {
+	&Image, &Icon {
+		padding-right: 0;
+		padding-left: 15px;
+	}
 }
