update page color for zion full width template type

--- a/packages/css-variables/frontend/_general.scss
+++ b/packages/css-variables/frontend/_general.scss
@@ -45,6 +45,6 @@
 		visibility: visible;
 	}
 }
-body.post-template-zion_builder_blank, body.page-template-zion_builder_blank, body.znpbwpeditorid {
-	background: transparent;
+body.post-template-zion_builder_blank, body.page-template-zion_builder_blank {
+	background: $surface;
 }
