Add elements popup imrovements
- Scroll to top of the elements when searching an element
- Prevent bottom scroll closing the window

--- a/packages/css-variables/frontend/_grid.scss
+++ b/packages/css-variables/frontend/_grid.scss
@@ -8,11 +8,17 @@ $columns: 12;
 	flex-grow: 0;
 	flex-shrink: 0;
 	width: 100%;
-	max-width: percentage($size / $columns);
+	max-width: math-percentage(math-div($size, $columns));
 }
 
 @mixin generate-offset($size, $columns: 12) {
-	margin-left: percentage($size / $columns);
+	@if $size==0 {
+		margin-left: math-percentage(0);
+	}
+
+	@else {
+		margin-left: math-percentage(math-div($size, $columns));
+	}
 }
 
 @mixin generate-offsets($offset: "") {
