--- a/packages/elements/src/Tabs/scss/main.scss
+++ b/packages/elements/src/Tabs/scss/main.scss
@@ -8,26 +8,26 @@
 			display: inline-block;
 			padding: 8px 20px;
 			margin: 0;
-			color: $font-color;
+			color: #858585;
 			font-size: 15px;
 			font-weight: 500;
-			border: 1px solid $border-color;
+			border: 1px solid #e5e5e5;
 			border-right: none;
 			border-bottom: none;
 			transition: color .25s linear;
 			cursor: pointer;
 
 			&:last-child {
-				border-right: 1px solid $border-color;
+				border-right: 1px solid #e5e5e5;
 			}
 
 			&:focus, &:hover {
-				color: $surface-active-color;
+				color: #464646;
 			}
 
 			&.zb-el-tabs-nav--active {
 				position: relative;
-				color: $surface-active-color;
+				color: #464646;
 
 				&:after {
 					content: "";
@@ -44,7 +44,7 @@
 
 	&-content {
 		padding: 15px 20px;
-		border: 1px solid $border-color;
+		border: 1px solid #e5e5e5;
 
 		 > div {
 			position: absolute;
@@ -74,15 +74,15 @@
 				display: block;
 				border-right: none;
 				border-bottom: none;
-				border-left: 1px solid $border-color;
+				border-left: 1px solid #e5e5e5;
 
 				&:last-child {
 					border-right: none;
-					border-bottom: 1px solid $border-color;
+					border-bottom: 1px solid #e5e5e5;
 				}
 
 				&.zb-el-tabs-nav--active {
-					border-top: 1px solid $border-color;
+					border-top: 1px solid #e5e5e5;
 					border-right: none;
 
 					&:after {
@@ -112,8 +112,8 @@
 
 			li {
 				display: block;
-				border-top: 1px solid $border-color;
-				border-right: 1px solid $border-color;
+				border-top: 1px solid #e5e5e5;
+				border-right: 1px solid #e5e5e5;
 				border-bottom: none;
 
 				&:last-child {
@@ -121,7 +121,7 @@
 				}
 
 				&.zb-el-tabs-nav--active {
-					border-top: 1px solid $border-color;
+					border-top: 1px solid #e5e5e5;
 
 					&:after {
 						display: none;
