Fixed element button icon on right doesn't have any margin

--- a/packages/elements/src/Button/frontend.scss
+++ b/packages/elements/src/Button/frontend.scss
@@ -33,6 +33,7 @@ $styleprimary: #06bee1;
 
 	.zb-el-button__icon {
 		margin-right: 0;
+		margin-left: 10px;
 	}
 }
 
@@ -54,6 +55,7 @@ $styleprimary: #06bee1;
 
 	.zb-el-button__icon {
 		margin-right: 0;
+		margin-bottom: 5px;
 	}
 }
 
@@ -62,6 +64,7 @@ $styleprimary: #06bee1;
 	align-items: center;
 
 	.zb-el-button__icon {
+		margin-top: 5px;
 		margin-right: 0;
 	}
 }
