--- a/packages/css-variables/edit-page.scss
+++ b/packages/css-variables/edit-page.scss
@@ -16,7 +16,7 @@
 
 	.editor-styles-wrapper .znpb-admin-post__edit-button {
 		color: #fff;
-		font-family: $font-stack;
+		font-family: var(--font-stack);
 	}
 }
 
@@ -34,7 +34,7 @@
 		padding: 14px 32px;
 		margin-right: 10px;
 		color: #fff;
-		font-family: $font-stack;
+		font-family: var(--font-stack);
 		font-size: 13px;
 		text-decoration: none;
 		background: $primary-color;
