--- a/packages/editor/src/scss/index.scss
+++ b/packages/editor/src/scss/index.scss
@@ -13,7 +13,7 @@
 	width: 100%;
 	height: 100%;
 	margin: 0 !important;
-	font-family: $font-stack;
+	font-family: var(--font-stack);
 	font-size: 14px;
 }
 
@@ -25,7 +25,7 @@ body * {
 	display: flex;
 	flex-direction: column;
 	color: $font-color;
-	font-family: $font-stack;
+	font-family: var(--font-stack);
 	font-size: 13px;
 	line-height: 1;
 
@@ -65,7 +65,7 @@ body * {
 	}
 
 	.znpb-button {
-		font-family: $font-stack;
+		font-family: var(--font-stack);
 		font-size: 13px;
 		text-decoration: none;
 
@@ -82,7 +82,7 @@ body * {
 		min-height: 140px;
 		padding: 16px 14px;
 		color: $font-color;
-		font-family: $font-stack;
+		font-family: var(--font-stack);
 		background-color: $surface;
 		border: 0;
 		border-radius: 3px;
