Revert "Replaced font family SCSS variable to CSS variable"
This reverts commit 401768ce7cf2d6bba260af1ff37705d1fa2de3bd.

--- a/packages/css-variables/_mixins.scss
+++ b/packages/css-variables/_mixins.scss
@@ -84,7 +84,7 @@
 %tooltip {
 	padding: 10px;
 	color: $font-color;
-	font-family: var(--font-stack);
+	font-family: $font-stack;
 	font-size: 13px;
 	background-color: #fff;
 	box-shadow: 0 2px 15px 0 rgba(0, 0, 0, .1);
