--- a/packages/components/src/scss/tooltip.scss
+++ b/packages/components/src/scss/tooltip.scss
@@ -4,6 +4,8 @@
 	&::before {
 		content: attr(data-zion-tooltip);
 		position: absolute;
+		bottom: calc(100% + 10px);
+		left: 50%;
 		max-width: 200px;
 		width: max-content;
 		background-color: #fff;
@@ -19,18 +21,22 @@
 		opacity: 0;
 		visibility: hidden;
 		padding: 5px 10px;
+		transform: translateX(-50%);
 		transition: opacity 0.2s, visibility 0.15s;
 	}
 
 	&::after {
 		content: '';
 		position: absolute;
+		bottom: calc(100% + 7px);
+		left: 50%;
 		width: 8px;
 		height: 8px;
 		background: #fff;
 		opacity: 0;
 		visibility: hidden;
 		transition: opacity 0.2s, visibility 0.15s;
+		transform: translateX(-50%) rotate(45deg);
 	}
 
 	&:hover::before,
@@ -40,29 +46,17 @@
 	}
 }
 
-[data-zion-tooltip-position='top'] {
-	&::before {
-		bottom: calc(100% + 10px);
-		left: 50%;
-		transform: translateX(-50%);
-	}
-
-	&::after {
-		bottom: calc(100% + 7px);
-		left: 50%;
-		transform: translateX(-50%) rotate(45deg);
-	}
-}
-
 [data-zion-tooltip-position='right'] {
 	&::before {
 		top: 50%;
+		bottom: auto;
 		left: calc(100% + 10px);
 		transform: translateY(-50%);
 	}
 
 	&::after {
 		top: 50%;
+		bottom: auto;
 		left: calc(100% + 7px);
 		transform: translateY(-50%) rotate(45deg);
 	}
@@ -71,14 +65,14 @@
 [data-zion-tooltip-position='bottom'] {
 	&::before {
 		top: calc(100% + 10px);
+		bottom: auto;
 		left: 50%;
-		transform: translateX(-50%);
 	}
 
 	&::after {
 		top: calc(100% + 7px);
+		bottom: auto;
 		left: 50%;
-		transform: translateX(-50%) rotate(45deg);
 	}
 }
 
@@ -86,12 +80,16 @@
 	&::before {
 		top: 50%;
 		right: calc(100% + 10px);
+		bottom: auto;
+		left: auto;
 		transform: translateY(-50%);
 	}
 
 	&::after {
 		top: 50%;
 		right: calc(100% + 7px);
+		bottom: auto;
+		left: auto;
 		transform: translateY(-50%) rotate(45deg);
 	}
 }
